--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,11 @@
 <title>Station 1</title>
 </head>
 <body>
+    <img src="assets/image/railway-thumbnail.png">
+    <p><span style="font-weight: bold;">TechTrain</span>の使い方</p>
+    <p><span style="font-weight: bold;">TechBowl</span></p>
+
+    <p>Suguru Ohki</p>
+    <p>6,722回視聴・2021/04/22</p>
 </body>
 </html>
